<resources>
    <string name="app_name">PlaplixApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="txtName">Nombre Producto</string>
    <string name="txtPrice">Precio Producto</string>
    <string name="txtDescrip">Descripcion de producto</string>
    <string name="txtlastprice">Ultimo Precio</string>
    <string name="swit">Credito</string>
</resources>